# BonchTeOfPro

./: README.md
Lab-1/: catalog.txt  explorer.cpp  main  main.cpp
Lab-2/: explorer.h  main  main.cpp
Lab-4/: CMakeLists.txt
Lab-4/headers/: Car.h  Plane.h  Vehicle.h
Lab-4/lib/: main.cpp
Lab-4/lib/sources/: Car.cpp  Plane.cpp  Vehicle.cpp
Lab-4/sources/: Car.cpp  Plane.cpp  Vehicle.cpp
Lab-4/test/: Car.cpp  Car.h  Plane.cpp  Plane.h  Vehicle.cpp  Vehicle.h  main  main.cpp
Lab-7/: LaboratoryWork-7.pro  myapp.cpp
LaboratoryWork-7/: main.cpp  myapp.h
Practice-1/: main  main.cpp
Practice-2/: main  main.cpp
Practice-3/Practice-3/: main.cpp
Practice-3/Practice-3.xcodeproj/: project.pbxproj
Practice-3/Practice-3.xcodeproj/project.xcworkspace/xcuserdata/sergeyspirin.xcuserdatad/: UserInterfaceState.xcuserstate
Practice-3/Practice-3.xcodeproj/xcuserdata/sergeyspirin.xcuserdatad/xcschemes/: xcschememanagement.plist
Practice-4/Practice-4/: main.cpp
Practice-4/Practice-4.xcodeproj/: project.pbxproj
Practice-4/Practice-4.xcodeproj/project.xcworkspace/xcuserdata/sergeyspirin.xcuserdatad/: UserInterfaceState.xcuserstate
Practice-5/Practice-5/: catalog.txt  main  main.cpp
Practice-5/Practice-5.xcodeproj/: project.pbxproj
build-LaboratoryWork-7-Qt_6_2_1_for_macOS-Debug/: Makefile  qmake_qmake_qm_files.qrc  qrc_qmake_qmake_qm_files.cpp
build-LaboratoryWork-7-Qt_6_2_1_for_macOS-Debug/LaboratoryWork-7.app/Contents/: Info.plist
build-LaboratoryWork-7-Qt_6_2_1_for_macOS-Debug/LaboratoryWork-7.app/Contents/MacOS/: LaboratoryWork-7  MainDateBase
(+4 files in other folders)
